Closed
Bug 1325678
Opened 9 years ago
Closed 9 years ago
Fix QuantumRender leaks when running reftests
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla54
Tracking | Status | |
---|---|---|
firefox53 | --- | affected |
People
(Reporter: kats, Assigned: kats)
References
Details
(Whiteboard: [gfx-noted])
The QR reftests on the graphics branch have been reporting leaks for a while now, but they haven't been causing failures. It looks like that was because of a bug in the harness, which is going to be fixed in bug 1325148. Once that harness fix makes its way to the graphics branch, our debug reftests are going to go orange (like in [1], where I applied those fixes on top of the graphics branch in a try push) until we fix the leaks. We should get on that.
[1] https://treeherder.mozilla.org/#/jobs?repo=try&revision=274bbd4861755336d40d51482e29d0b330fa28a7
Assignee | ||
Comment 1•9 years ago
|
||
Found at least one problem: WebRenderContainerLayer's destructor doesn't RemoveChild() its children like the other ContainerLayers do. That's the source of at least some leaks, if not all.
Try push with that fixed:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=1636a5dbbe8a443ba07d7edd9cf2022978cc7597
Assignee: nobody → bugmail
Assignee | ||
Comment 2•9 years ago
|
||
That fixed the memory leaks, but exposed a couple of crashing tests. With skip-if'ing those tests everything is green: https://treeherder.mozilla.org/#/jobs?repo=try&revision=477242c9653027bbbde4f7e8f4949092f5283a8f
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/projects/graphics/rev/f141ee9b993c
Have WebRenderContainerLayer release child layers on destruction to avoid leaking them. r=gfx?
https://hg.mozilla.org/projects/graphics/rev/9ab4320b60d3
Disable a couple of tests crashing with the memory leak fix. r=gfx?
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•9 years ago
|
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•