Bug 1325678 - Have WebRenderContainerLayer release child layers on destruction to avoid leaking them. r=gfx?

MozReview-Commit-ID: 2AO70JuCt6H